Fix jumpy js for iOS

--- a/styles/small.css
+++ b/styles/small.css
@@ -16,6 +16,7 @@ footer ul {
 }
 
 .block {
+	padding-top: 10px;
 	margin: auto;
 	z-index: 200;
 }
@@ -82,7 +83,7 @@ footer ul {
 }
 .container-10 {
 	left: 8%;
-	top: -48px;
+	top: -60px;
 }
  
 .container-5,
@@ -108,14 +109,16 @@ footer ul {
 
 .info {
 	margin: auto;
+	max-width: 300px;
 	text-align: right;
+	top: 50px;
 	width: 80%;
 }
 
 .work-examples {
 	left: 10%;
 	height: 80%;
-	top: 150px;
+	top: 180px;
 	width: 80%;
 }
 
@@ -149,15 +152,16 @@ table {
 }
 
 .down-arrow {
-	top: 280px;
+	top: 299px;
 }
 
 .up-arrow {
-	top: -38px;
+	top: 23px;
 }
 .work-examples .up-arrow {
-	top: -60px;
-	left: 70%;
+	top: -40px;
+	left: 30%;
+	z-index: 400;
 }
 
 a h2:hover {
